[package]
name = "dxauth0"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Shared optional dependencies (used by both client and server)
reqwest = { version = "0.13", features = ["json"] }
tracing = { version = "0.1" }

# Client-specific dependencies (behind client feature)
dioxus = { version = "0.7.3", features = ["fullstack"] }
base64 = { version = "0.22" }
sha2 = { version = "0.10" }
rand = { version = "0.10" }
urlencoding = { version = "2.1" }

# WASM-specific dependencies for client (only when target is wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.85", features = ["Window", "Document", "Element", "Storage", "Location"], optional = true }
js-sys = { version = "0.3.85", optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }
getrandom = { version = "0.4.1", optional = true }

# Server-specific dependencies (only for non-WASM targets, behind server feature)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.8", optional = true }
axum-cookie = { version = "0.2.4", optional = true }
cookie-rs = { version = "0.4", optional = true }
jsonwebtoken = { version = "10.3", optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"], optional = true }
thiserror = { version = "2.0.18", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
mobile = [ "dioxus/mobile" ]
desktop = [ "dioxus/desktop"]
# Client feature: includes PKCE, token storage, JWT decoding, HTTP client
web = [
    "dioxus/web",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:getrandom",
]

# Server feature: includes JWT validation, JWKS caching, Axum extractors
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-cookie",
    "dep:cookie-rs",
    "dep:jsonwebtoken",
    "dep:tokio",
    "dep:thiserror",
]

[lib]
crate-type = ["rlib"]
